# redisrelay

./: .bazelrc  .gitignore  .travis.yml  BUILD  README.md  WORKSPACE  main.go
example/: simple.json  simple.yml
relay/: BUILD.bazel  options.go  reader.go  reader_test.go  server.go  server_test.go  types.go  writer.go
relay/proto/: BUILD.bazel  config.proto
