load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "config_proto",
    srcs = ["proto/config.proto"],
    deps = [
        "@com_google_protobuf//:duration_proto",
    ],
)

go_proto_library(
    name = "config_go_proto",
    importpath = "github.com/moiji-mobile/redisrelay/relay/proto",
    proto = ":config_proto",
)

go_library(
    name = "go_default_library",
    srcs = [
        "options.go",
        "reader.go",
        "server.go",
        "types.go",
        "writer.go",
    ],
    importpath = "github.com/moiji-mobile/redisrelay/relay",
    visibility = ["//visibility:public"],
    deps = ["@org_uber_go_zap//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "reader_test.go",
        "server_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["@org_uber_go_zap//:go_default_library"],
)
