load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "options.go",
        "reader.go",
        "server.go",
        "types.go",
        "writer.go",
    ],
    importpath = "github.com/moiji-mobile/redisrelay/relay",
    visibility = ["//visibility:public"],
    deps = [
        "//relay/proto:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "reader_test.go",
        "server_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["@org_uber_go_zap//:go_default_library"],
)
